yaml/wordpress-deployment.yaml
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: wordpress-hpa
spec:
  maxReplicas: 8
  minReplicas: 2
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: wordpress-deployment
  targetCPUUtilizationPercentage: 60
--- # HPA
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
    # deployment distribution
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: sjleeacr.azurecr.io/wordpress
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          resources:
            requests:
              memory: "990Mi"
              cpu: "990m"
            limits:
              memory: "990Mi"
              cpu: "990m"
              # hpa resource
          volumeMounts:
            - name: volume # azurefile, volume
              mountPath: /var/www/html
              # pvc mount
      volumes:
        - name: volume # azurefile, volume
          persistentVolumeClaim:
            claimName: sjlee-pvc # PVC name
