yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true" # http -> https
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "sjleecert" # ssl deploy
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true" # session
spec:
  tls:
    - hosts:
        - "*.sjlee.pw"
      secretName: sjlee-tls
  rules:
    - host: "*.sjlee.pw"
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
